[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Main/Jump Area.gd" type="Script" id=1]
[ext_resource path="res://Graphics/UI/Battle/targetCursor.png" type="Texture" id=2]
[ext_resource path="res://Shaders/Outline.shader" type="Shader" id=3]
[ext_resource path="res://Nodes/Ui/Camera.tscn" type="PackedScene" id=4]

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/color = Color( 0, 0, 0, 1 )
shader_param/width = 1.0
shader_param/pattern = 2
shader_param/inside = true

[sub_resource type="Animation" id=7]
resource_name = "Arrow"
length = 1.16667
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.249, 0.583333, 0.833333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3, -10 ), Vector2( 0, 0 ), Vector2( 3, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.416667, 0.583333, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -25.0, 0.0, 25.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -20.2 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=4]
radius = 32.0

[node name="Jump Area" type="Sprite"]
script = ExtResource( 1 )
_initially_on = true

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 5 )
position = Vector2( 8, -8 )
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Jump Points" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Jump Points"]
position = Vector2( 8, 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Arrow = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="Inside" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Inside"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="Close" type="Area2D" parent="."]
visible = false
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Close"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Camera2D" parent="." instance=ExtResource( 4 )]

[connection signal="body_entered" from="Inside" to="." method="_on_Jump_Area_body_entered"]
[connection signal="body_exited" from="Inside" to="." method="_on_Jump_Area_body_exited"]
[connection signal="body_entered" from="Close" to="." method="_on_Close_body_entered"]
[connection signal="body_exited" from="Close" to="." method="_on_Close_body_exited"]
